Refactor RemoteClassLoader
Signed-off-by: Open592 Developer <uss@open592.com>